@@ -38,9 +38,6 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
     ## Common action
     MACRO(MANAGE_SOURCE_VERSION_CONTROL_COMMON)
 	ADD_DEPENDENCIES(tag version_check)
-	ADD_DEPENDENCIES(changelog_update tag)
-	ADD_DEPENDENCIES(commit_after_release changelog_update)
-	ADD_DEPENDENCIES(push_post_release commit_after_release)
     ENDMACRO(MANAGE_SOURCE_VERSION_CONTROL_COMMON)
 
     MACRO(MANAGE_SOURCE_VERSION_CONTROL_GIT)
